Updated all localizations to include validation messages

--- a/src/main/resources/localization_da.properties
+++ b/src/main/resources/localization_da.properties
@@ -63,3 +63,16 @@ WeekdayNearestDayX0=hverdag\u0020nærmest\u0020dag\u0020%s
 CommaStartingX0=,\u0020startende\u0020%s
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020dage\u0020før\u0020den\u0020sidste\u0020dag\u0020i\u0020måneden
 ComaOnlyInYearX0=,\u0020kun\u0020i\u0020%s
+InvalidExpressionFormatTooFewParts=Cron-udtrykket\u0020"%s"\u0020har\u0020kun\u0020[%d]\u0020dele.\u0020Der\u0020kræves\u0020mindst\u00205\u0020dele.
+InvalidExpressionFormatTooManyParts=Cron-udtrykket\u0020"%s"\u0020har\u0020for\u0020mange\u0020dele\u0020[%d].\u0020Udtryk\u0020må\u0020ikke\u0020have\u0020mere\u0020end\u00207\u0020dele.
+InvalidFieldExpressionFormat=Udtrykket,\u0020der\u0020beskriver\u0020feltet\u0020%s,\u0020er\u0020ikke\u0020i\u0020et\u0020gyldigt\u0020format
+InvalidFieldSecond=SEKUND
+InvalidFieldMinute=MINUT
+InvalidFieldHour=TIME
+InvalidFieldDoM=MÅNEDSDAG
+InvalidFieldMonth=MÅNED
+InvalidFieldDoW=Ugedag
+InvalidFieldYear=ÅR
+InvalidDomDowExpression=Specificering\u0020af\u0020både\u0020en\u0020dag\u0020i\u0020måneden\u0020og\u0020en\u0020ugedag\u0020understøttes\u0020ikke.\u0020Enten\u0020eller\u0020den\u0020anden\u0020skal\u0020erklæres\u0020som\u0020"?"
+InvalidYearsRangeValue=Udtrykket,\u0020der\u0020beskriver\u0020feltet\u0020YEAR,\u0020er\u0020ikke\u0020i\u0020et\u0020gyldigt\u0020format.\u0020Accepterede\u0020årsværdier\u0020er\u0020%s-%s
+InvalidYearFrequencyValue=Udtrykket,\u0020der\u0020beskriver\u0020feltet\u0020YEAR,\u0020er\u0020ikke\u0020i\u0020et\u0020gyldigt\u0020format.\u0020Accepterede\u0020frekvensværdier\u0020er\u0020%s-%s
