--- a/src/main/resources/localization_de.properties
+++ b/src/main/resources/localization_de.properties
@@ -63,3 +63,16 @@ ComaEveryX0Years=,\u0020alle\u0020%s\u0020Jahre
 CommaStartingX0=,\u0020beginnend\u0020%s
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020tage\u0020vor\u0020dem\u0020letzten\u0020Tag\u0020des\u0020Monats
 ComaOnlyInYearX0=,\u0020nur\u0020im\u0020%s
+InvalidExpressionFormatTooFewParts=Der\u0020Cron-Ausdruck\u0020"%s"\u0020besteht\u0020nur\u0020aus\u0020[%d]\u0020Teilen.\u0020Es\u0020sind\u0020mindestens\u00205\u0020Teile\u0020erforderlich.
+InvalidExpressionFormatTooManyParts=Der\u0020Cron-Ausdruck\u0020"%s"\u0020besteht\u0020aus\u0020zu\u0020vielen\u0020Teilen\u0020[%d].\u0020Ausdrücke\u0020dürfen\u0020nicht\u0020mehr\u0020als\u00207\u0020Teile\u0020haben.
+InvalidFieldExpressionFormat=Der\u0020Ausdruck,\u0020der\u0020das\u0020Feld\u0020%s\u0020beschreibt,\u0020hat\u0020kein\u0020gültiges\u0020Format
+InvalidFieldSecond=ZWEITE
+InvalidFieldMinute=MINUTE
+InvalidFieldHour=STUNDE
+InvalidFieldDoM=MONATSTAG
+InvalidFieldMonth=MONAT
+InvalidFieldDoW=WOCHENTAG
+InvalidFieldYear=JAHR
+InvalidDomDowExpression=Die\u0020Angabe\u0020eines\u0020Wochentags\u0020und\u0020eines\u0020Wochentags\u0020wird\u0020nicht\u0020unterstützt.\u0020Entweder\u0020der\u0020eine\u0020oder\u0020der\u0020andere\u0020sollte\u0020als\u0020"?"
+InvalidYearsRangeValue=Der\u0020Ausdruck,\u0020der\u0020das\u0020Feld\u0020YEAR\u0020beschreibt,\u0020hat\u0020kein\u0020gültiges\u0020Format.\u0020Akzeptierte\u0020Jahreswerte\u0020sind\u0020%s-%s
+InvalidYearFrequencyValue=Der\u0020Ausdruck,\u0020der\u0020das\u0020Feld\u0020YEAR\u0020beschreibt,\u0020hat\u0020kein\u0020gültiges\u0020Format.\u0020Akzeptierte\u0020Frequenzwerte\u0020sind\u0020%s-%s
