--- a/src/main/resources/localization_es.properties
+++ b/src/main/resources/localization_es.properties
@@ -63,3 +63,16 @@ ComaEveryX0Years=,\u0020cada\u0020%s\u0020años
 CommaStartingX0=,\u0020comenzando\u0020%s
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020días\u0020antes\u0020del\u0020último\u0020día\u0020del\u0020mes
 ComaOnlyInYearX0=,\u0020sólo\u0020en\u0020%s
+InvalidExpressionFormatTooFewParts=La\u0020expresión\u0020cron\u0020"%s"\u0020solo\u0020tiene\u0020[%d]\u0020partes.\u0020Se\u0020requieren\u0020al\u0020menos\u00205\u0020partes.
+InvalidExpressionFormatTooManyParts=La\u0020expresión\u0020cron\u0020"%s"\u0020tiene\u0020demasiadas\u0020partes\u0020[%d].\u0020Las\u0020expresiones\u0020no\u0020deben\u0020tener\u0020más\u0020de\u00207\u0020partes.
+InvalidFieldExpressionFormat=La\u0020expresión\u0020que\u0020describe\u0020el\u0020campo\u0020%s\u0020no\u0020tiene\u0020un\u0020formato\u0020válido.
+InvalidFieldSecond=SEGUNDO
+InvalidFieldMinute=MINUTO
+InvalidFieldHour=HORA
+InvalidFieldDoM=DIA\u0020DEL\u0020MES
+InvalidFieldMonth=MES
+InvalidFieldDoW=DÍA\u0020DE\u0020LA\u0020SEMANA
+InvalidFieldYear=AÑO
+InvalidDomDowExpression=No\u0020se\u0020admite\u0020la\u0020especificación\u0020de\u0020un\u0020día\u0020del\u0020mes\u0020y\u0020un\u0020día\u0020de\u0020la\u0020semana.\u0020Uno\u0020u\u0020otro\u0020debe\u0020declararse\u0020como\u0020"?"
+InvalidYearsRangeValue=La\u0020expresión\u0020que\u0020describe\u0020el\u0020campo\u0020AÑO\u0020no\u0020tiene\u0020un\u0020formato\u0020válido.\u0020Los\u0020valores\u0020de\u0020año\u0020aceptados\u0020son\u0020%s-%s
+InvalidYearFrequencyValue=La\u0020expresión\u0020que\u0020describe\u0020el\u0020campo\u0020AÑO\u0020no\u0020tiene\u0020un\u0020formato\u0020válido.\u0020Los\u0020valores\u0020de\u0020frecuencia\u0020aceptados\u0020son\u0020%s-%s
