--- a/src/main/resources/localization_es_MX.properties
+++ b/src/main/resources/localization_es_MX.properties
@@ -65,3 +65,16 @@ AMPeriod=A. M.
 PMPeriod=P. M.
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020días\u0020antes\u0020del\u0020último\u0020día\u0020del\u0020mes
 ComaOnlyInYearX0=,\u0020solo\u0020en\u0020%s
+InvalidExpressionFormatTooFewParts=La expresión cron "%s" solo tiene [%d] partes. Se requieren al menos 5 partes.
+InvalidExpressionFormatTooManyParts=La expresión cron "%s" tiene demasiadas partes [%d]. Las expresiones no deben tener más de 7 partes.
+InvalidFieldExpressionFormat=La expresión que describe el campo %s no tiene un formato válido.
+InvalidFieldSecond=SEGUNDO
+InvalidFieldMinute=MINUTO
+InvalidFieldHour=HORA
+InvalidFieldDoM=DIA DEL MES
+InvalidFieldMonth=MES
+InvalidFieldDoW=DÍA DE LA SEMANA
+InvalidFieldYear=AÑO
+InvalidDomDowExpression=No se admite la especificación de un día del mes y un día de la semana. Uno u otro debe declararse como "?"
+InvalidYearsRangeValue=La expresión que describe el campo AÑO no tiene un formato válido. Los valores de año aceptados son %s-%s
+InvalidYearFrequencyValue=La expresión que describe el campo AÑO no tiene un formato válido. Los valores de frecuencia aceptados son %s-%s
