--- a/src/main/resources/localization_fi.properties
+++ b/src/main/resources/localization_fi.properties
@@ -64,3 +64,16 @@ SpaceX0OfTheMonth=\u0020%s\u0020kuukaudessa
 Third=kolmas
 WeekdayNearestDayX0=viikonpäivä\u0020lähintä\u0020%s\u0020päivää
 ComaOnlyInYearX0=,\u0020vain\u0020%s
+InvalidExpressionFormatTooFewParts=Cron-lausekkeessa\u0020"%s"\u0020on\u0020vain\u0020[%d]\u0020osaa.\u0020Ainakin\u00205\u0020osaa\u0020vaaditaan.
+InvalidExpressionFormatTooManyParts=Cron-lausekkeessa\u0020"%s"\u0020on\u0020liian\u0020monta\u0020osaa\u0020[%d].\u0020Lausekkeissa\u0020saa\u0020olla\u0020enintään\u00207\u0020osaa.
+InvalidFieldExpressionFormat=%s-kenttää\u0020kuvaava\u0020lauseke\u0020ei\u0020ole\u0020kelvollinen\u0020muoto
+InvalidFieldSecond=TOINEN
+InvalidFieldMinute=MINUUTTI
+InvalidFieldHour=TUNNIN
+InvalidFieldDoM=KUUKAUDEN\u0020PÄIVÄ
+InvalidFieldMonth=KUUKAUSI
+InvalidFieldDoW=VIIKONPÄIVÄ
+InvalidFieldYear=VUOSI
+InvalidDomDowExpression=Sekä\u0020kuukausipäivän\u0020että\u0020viikonpäivän\u0020määrittämistä\u0020ei\u0020tueta.\u0020Joko\u0020toinen\u0020tai\u0020toinen\u0020tulisi\u0020julistaa\u0020"?"
+InvalidYearsRangeValue=VUOTTA\u0020-kenttää\u0020kuvaava\u0020lauseke\u0020ei\u0020ole\u0020kelvollisessa\u0020muodossa.\u0020Hyväksytyt\u0020vuoden\u0020arvot\u0020ovat\u0020%s-%s
+InvalidYearFrequencyValue=VUOTTA\u0020-kenttää\u0020kuvaava\u0020lauseke\u0020ei\u0020ole\u0020kelvollisessa\u0020muodossa.\u0020Hyväksytyt\u0020taajuusarvot\u0020ovat\u0020%s-%s
