--- a/src/main/resources/localization_fr.properties
+++ b/src/main/resources/localization_fr.properties
@@ -65,3 +65,16 @@ WeekSpaceAndSpace=\u0020et\u0020le\u0020
 CommaStartingX0=,\u0020départ\u0020%s
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020jours\u0020avant\u0020le\u0020dernier\u0020jour\u0020du\u0020mois
 ComaOnlyInYearX0=,\u0020uniquement\u0020en\u0020%s
+InvalidExpressionFormatTooFewParts=L'expression\u0020cron\u0020"%s"\u0020n'a\u0020que\u0020[%d]\u0020parties.\u0020Au\u0020moins\u00205\u0020pièces\u0020sont\u0020nécessaires.
+InvalidExpressionFormatTooManyParts=L'expression\u0020cron\u0020"%s"\u0020comporte\u0020trop\u0020de\u0020parties\u0020[%d].\u0020Les\u0020expressions\u0020ne\u0020doivent\u0020pas\u0020comporter\u0020plus\u0020de\u00207\u0020parties.
+InvalidFieldExpressionFormat=L'expression\u0020décrivant\u0020le\u0020champ\u0020%s\u0020n'est\u0020pas\u0020dans\u0020un\u0020format\u0020valide
+InvalidFieldSecond=SECONDE
+InvalidFieldMinute=MINUTE
+InvalidFieldHour=HEURE
+InvalidFieldDoM=JOUR\u0020DU\u0020MOIS
+InvalidFieldMonth=MOIS
+InvalidFieldDoW=JOUR\u0020DE\u0020LA\u0020SEMAINE
+InvalidFieldYear=AN
+InvalidDomDowExpression=La\u0020spécification\u0020d'un\u0020jour\u0020du\u0020mois\u0020et\u0020d'un\u0020jour\u0020de\u0020la\u0020semaine\u0020n'est\u0020pas\u0020prise\u0020en\u0020charge.\u0020L'un\u0020ou\u0020l'autre\u0020doit\u0020être\u0020déclaré\u0020"?"
+InvalidYearsRangeValue=L'expression\u0020décrivant\u0020le\u0020champ\u0020YEAR\u0020n'est\u0020pas\u0020dans\u0020un\u0020format\u0020valide.\u0020Les\u0020valeurs\u0020d'année\u0020acceptées\u0020sont\u0020%s-%s
+InvalidYearFrequencyValue=L'expression\u0020décrivant\u0020le\u0020champ\u0020YEAR\u0020n'est\u0020pas\u0020dans\u0020un\u0020format\u0020valide.\u0020Les\u0020valeurs\u0020de\u0020fréquence\u0020acceptées\u0020sont\u0020%s-%s
