--- a/src/main/resources/localization_ja.properties
+++ b/src/main/resources/localization_ja.properties
@@ -65,3 +65,16 @@ AMPeriod=午前
 PMPeriod=午後
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020月末から\u0020%s\u0020日前
 ComaOnlyInYearX0=,\u0020%s
+InvalidExpressionFormatTooFewParts=cron式\u0020"％s"には[％d]の部分しかありません。\u0020少なくとも5つのパーツが必要です。
+InvalidExpressionFormatTooManyParts=cron式「％s」の部分が多すぎます[％d]。\u0020式の部分は7つ以下にする必要があります。
+InvalidFieldExpressionFormat=％sフィールドを説明する式が有効な形式ではありません
+InvalidFieldSecond=セカンド
+InvalidFieldMinute=分
+InvalidFieldHour=時間
+InvalidFieldDoM=月の日
+InvalidFieldMonth=月
+InvalidFieldDoW=曜日
+InvalidFieldYear=年
+InvalidDomDowExpression=日と曜日の両方の指定はサポートされていません。\u0020どちらか一方を「？」として宣言する必要があります。
+InvalidYearsRangeValue=YEARフィールドを表す式が有効な形式ではありません。\u0020受け入れられる年の値は％s-％sです
+InvalidYearFrequencyValue=YEARフィールドを表す式が有効な形式ではありません。\u0020許容される頻度の値は％s-％sです
