--- a/src/main/resources/localization_ko.properties
+++ b/src/main/resources/localization_ko.properties
@@ -65,3 +65,16 @@ AMPeriod=오전
 PMPeriod=오후
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020월의\u0020마지막\u0020날\u0020이전\u0020%s일
 ComaOnlyInYearX0=,\u0020%s에서만
+InvalidExpressionFormatTooFewParts=cron\u0020표현식\u0020"%s"에는\u0020[%d]\u0020부분\u0020만\u0020있습니다.\u00205\u0020개\u0020이상의\u0020부품이\u0020필요합니다.
+InvalidExpressionFormatTooManyParts=cron\u0020표현식\u0020"%s"에\u0020부분이\u0020너무\u0020많습니다\u0020[%d].\u0020식은\u00207\u0020개를\u0020초과\u0020할\u0020수\u0020없습니다.
+InvalidFieldExpressionFormat=%s\u0020필드를\u0020설명하는\u0020표현식이\u0020올바른\u0020형식이\u0020아닙니다
+InvalidFieldSecond=둘째
+InvalidFieldMinute=분
+InvalidFieldHour=시
+InvalidFieldDoM=이달의\u0020날
+InvalidFieldMonth=달
+InvalidFieldDoW=주간
+InvalidFieldYear=년
+InvalidDomDowExpression=요일과\u0020요일을\u0020모두\u0020지정할\u0020수는\u0020없습니다.\u0020둘\u0020중\u0020하나를\u0020"?"로\u0020선언해야합니다.
+InvalidYearsRangeValue=YEAR\u0020필드를\u0020설명하는\u0020표현식이\u0020올바른\u0020형식이\u0020아닙니다.\u0020허용되는\u0020연도\u0020값은\u0020%s-%s입니다.
+InvalidYearFrequencyValue=YEAR\u0020필드를\u0020설명하는\u0020표현식이\u0020올바른\u0020형식이\u0020아닙니다.\u0020허용되는\u0020주파수\u0020값은\u0020%s-%s입니다.
