--- a/src/main/resources/localization_nb.properties
+++ b/src/main/resources/localization_nb.properties
@@ -63,3 +63,16 @@ WeekdayNearestDayX0=ukedag\u0020nærmest\u0020dag\u0020%s
 CommaStartingX0=,\u0020starter\u0020%s
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020dager\u0020før\u0020den\u0020siste\u0020dagen\u0020i\u0020måneden
 ComaOnlyInYearX0=,\u0020bare\u0020i\u0020%s
+InvalidExpressionFormatTooFewParts=Cron-uttrykket\u0020"%s"\u0020har\u0020bare\u0020[%d]\u0020deler.\u0020Minst\u00205\u0020deler\u0020er\u0020påkrevd.
+InvalidExpressionFormatTooManyParts=Cron-uttrykket\u0020"%s"\u0020har\u0020for\u0020mange\u0020deler\u0020[%d].\u0020Uttrykk\u0020må\u0020ikke\u0020ha\u0020mer\u0020enn\u00207\u0020deler.
+InvalidFieldExpressionFormat=Uttrykket\u0020som\u0020beskriver\u0020%s-feltet\u0020er\u0020ikke\u0020i\u0020gyldig\u0020format
+InvalidFieldSecond=SEKUND
+InvalidFieldMinute=MINUTT
+InvalidFieldHour=TIME
+InvalidFieldDoM=MÅNEDENS\u0020DAG
+InvalidFieldMonth=MÅNED
+InvalidFieldDoW=UKEDAG
+InvalidFieldYear=ÅR
+InvalidDomDowExpression=Å\u0020spesifisere\u0020både\u0020en\u0020dag\u0020i\u0020måneden\u0020og\u0020en\u0020dag\u0020i\u0020uken\u0020støttes\u0020ikke.\u0020Enten\u0020skal\u0020den\u0020ene\u0020eller\u0020den\u0020andre\u0020erklæres\u0020som\u0020"?"
+InvalidYearsRangeValue=Uttrykket\u0020som\u0020beskriver\u0020ÅR-feltet\u0020er\u0020ikke\u0020i\u0020gyldig\u0020format.\u0020Godkjente\u0020årverdier\u0020er\u0020%s-%s
+InvalidYearFrequencyValue=Uttrykket\u0020som\u0020beskriver\u0020ÅR-feltet\u0020er\u0020ikke\u0020i\u0020gyldig\u0020format.\u0020Godkjente\u0020frekvensverdier\u0020er\u0020%s-%s
