--- a/src/main/resources/localization_nl.properties
+++ b/src/main/resources/localization_nl.properties
@@ -63,3 +63,16 @@ ComaEveryX0Years=,\u0020elke\u0020%s\u0020jaren
 CommaStartingX0=,\u0020beginnend\u0020%s
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020dagen\u0020vóór\u0020de\u0020laatste\u0020dag\u0020van\u0020de\u0020maand
 ComaOnlyInYearX0=,\u0020alleen\u0020in\u0020%s
+InvalidExpressionFormatTooFewParts=De\u0020cron-expressie\u0020"%s"\u0020heeft\u0020slechts\u0020[%d]\u0020delen.\u0020Er\u0020zijn\u0020minimaal\u00205\u0020onderdelen\u0020vereist.
+InvalidExpressionFormatTooManyParts=De\u0020cron-expressie\u0020"%s"\u0020bestaat\u0020uit\u0020teveel\u0020delen\u0020[%d].\u0020Expressies\u0020mogen\u0020niet\u0020uit\u0020meer\u0020dan\u00207\u0020delen\u0020bestaan.
+InvalidFieldExpressionFormat=De\u0020expressie\u0020die\u0020het\u0020veld\u0020%s\u0020beschrijft,\u0020heeft\u0020geen\u0020geldige\u0020indeling.
+InvalidFieldSecond=SECONDE
+InvalidFieldMinute=MINUUT
+InvalidFieldHour=UUR
+InvalidFieldDoM=DAG\u0020VAN\u0020DE\u0020MAAND
+InvalidFieldMonth=MAAND
+InvalidFieldDoW=DAG\u0020VAN\u0020DE\u0020WEEK
+InvalidFieldYear=JAAR
+InvalidDomDowExpression=Het\u0020opgeven\u0020van\u0020zowel\u0020een\u0020dag\u0020van\u0020de\u0020maand\u0020als\u0020een\u0020dag\u0020van\u0020de\u0020week\u0020wordt\u0020niet\u0020ondersteund.\u0020Specifieer\u0020één\u0020van\u0020de\u0020twee\u0020als\u0020'?'
+InvalidYearsRangeValue=De\u0020expressie\u0020die\u0020het\u0020JAAR-veld\u0020beschrijft,\u0020heeft\u0020geen\u0020geldige\u0020indeling.\u0020Geaccepteerde\u0020waarden\u0020voor\u0020het\u0020jaar\u0020zijn\u0020%s-%s
+InvalidYearFrequencyValue=De\u0020expressie\u0020die\u0020het\u0020JAAR-veld\u0020beschrijft,\u0020heeft\u0020geen\u0020geldige\u0020indeling.\u0020Geaccepteerde\u0020frequentiewaarden\u0020zijn\u0020%s-%s
