--- a/src/main/resources/localization_pl.properties
+++ b/src/main/resources/localization_pl.properties
@@ -63,3 +63,16 @@ WeekdayNearestDayX0=dzień\u0020roboczy\u0020najbliższy\u0020%s-ego\u0020dnia
 CommaStartingX0=,\u0020startowy\u0020%s
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020dni\u0020przed\u0020ostatnim\u0020dniem\u0020miesiąca
 ComaOnlyInYearX0=,\u0020tylko\u0020%s
+InvalidExpressionFormatTooFewParts=Wyrażenie\u0020cron\u0020„%s”\u0020ma\u0020tylko\u0020[%d]\u0020części.\u0020Wymagane\u0020są\u0020co\u0020najmniej\u00205\u0020części.
+InvalidExpressionFormatTooManyParts=Wyrażenie\u0020cron\u0020„%s”\u0020ma\u0020zbyt\u0020wiele\u0020części\u0020[%d].\u0020Wyrażenia\u0020nie\u0020mogą\u0020zawierać\u0020więcej\u0020niż\u00207\u0020części.
+InvalidFieldExpressionFormat=Wyrażenie\u0020opisujące\u0020pole\u0020%s\u0020ma\u0020niepoprawny\u0020format
+InvalidFieldSecond=DRUGA
+InvalidFieldMinute=MINUTA
+InvalidFieldHour=GODZINA
+InvalidFieldDoM=DZIEŃ\u0020MIESIĄCA
+InvalidFieldMonth=MIESIĄC
+InvalidFieldDoW=DZIEŃ\u0020TYGODNIA
+InvalidFieldYear=ROK
+InvalidDomDowExpression=Określanie\u0020dnia\u0020miesiąca\u0020i\u0020dnia\u0020tygodnia\u0020nie\u0020jest\u0020obsługiwane.\u0020Jedno\u0020lub\u0020drugie\u0020należy\u0020zadeklarować\u0020jako\u0020„?”
+InvalidYearsRangeValue=Wyrażenie\u0020opisujące\u0020pole\u0020YEAR\u0020ma\u0020niepoprawny\u0020format.\u0020Akceptowane\u0020wartości\u0020roku\u0020to\u0020%s-%s
+InvalidYearFrequencyValue=Wyrażenie\u0020opisujące\u0020pole\u0020YEAR\u0020ma\u0020niepoprawny\u0020format.\u0020Akceptowane\u0020wartości\u0020częstotliwości\u0020to\u0020%s-%s
