--- a/src/main/resources/localization_pt.properties
+++ b/src/main/resources/localization_pt.properties
@@ -63,3 +63,16 @@ ComaEveryX0Years=,\u0020a\u0020cada\u0020%s\u0020anos
 CommaStartingX0=,\u0020iniciando\u0020%s
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020dias\u0020antes\u0020do\u0020último\u0020dia\u0020do\u0020mês
 ComaOnlyInYearX0=,\u0020somente\u0020em\u0020%s
+InvalidExpressionFormatTooFewParts=A\u0020expressão\u0020cron\u0020"%s"\u0020possui\u0020apenas\u0020[%d]\u0020partes.\u0020São\u0020necessárias\u0020pelo\u0020menos\u00205\u0020partes.
+InvalidExpressionFormatTooManyParts=A\u0020expressão\u0020cron\u0020"%s"\u0020tem\u0020muitas\u0020partes\u0020[%d].\u0020As\u0020expressões\u0020não\u0020devem\u0020ter\u0020mais\u0020de\u00207\u0020partes.
+InvalidFieldExpressionFormat=A\u0020expressão\u0020que\u0020descreve\u0020o\u0020campo%\u0020s\u0020não\u0020está\u0020em\u0020um\u0020formato\u0020válido
+InvalidFieldSecond=SEGUNDO
+InvalidFieldMinute=MINUTO
+InvalidFieldHour=HORA
+InvalidFieldDoM=DIA\u0020DO\u0020MÊS
+InvalidFieldMonth=MÊS
+InvalidFieldDoW=DIA\u0020DA\u0020SEMANA
+InvalidFieldYear=ANO
+InvalidDomDowExpression=A\u0020especificação\u0020de\u0020um\u0020dia\u0020do\u0020mês\u0020e\u0020um\u0020dia\u0020da\u0020semana\u0020não\u0020é\u0020suportada.\u0020Um\u0020ou\u0020outro\u0020deve\u0020ser\u0020declarado\u0020como\u0020"?"
+InvalidYearsRangeValue=A\u0020expressão\u0020que\u0020descreve\u0020o\u0020campo\u0020YEAR\u0020não\u0020está\u0020em\u0020um\u0020formato\u0020válido.\u0020Os\u0020valores\u0020do\u0020ano\u0020aceitos\u0020são\u0020%s-%s
+InvalidYearFrequencyValue=A\u0020expressão\u0020que\u0020descreve\u0020o\u0020campo\u0020YEAR\u0020não\u0020está\u0020em\u0020um\u0020formato\u0020válido.\u0020Os\u0020valores\u0020de\u0020frequência\u0020aceitos\u0020são\u0020%s-%s
