--- a/src/main/resources/localization_ro.properties
+++ b/src/main/resources/localization_ro.properties
@@ -70,3 +70,16 @@ AMPeriod=
 PMPeriod=după\u0020amiază
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020zile\u0020înainte\u0020de\u0020ultima\u0020zi\u0020a\u0020lunii
 ComaOnlyInYearX0=,\u0020doar\u0020în\u0020%s
+InvalidExpressionFormatTooFewParts=Expresia cron „%s” are doar [%d] părți. Cel puțin 5 piese sunt necesare.
+InvalidExpressionFormatTooManyParts=Expresia cron "%s" are prea multe părți [%d]. Expresiile nu trebuie să aibă mai mult de 7 părți.
+InvalidFieldExpressionFormat=Expresia care descrie câmpul %s nu este într-un format valid
+InvalidFieldSecond=AL DOILEA
+InvalidFieldMinute=MINUT
+InvalidFieldHour=ORA
+InvalidFieldDoM=ZIUA LUNII
+InvalidFieldMonth=LUNĂ
+InvalidFieldDoW=ZI A SĂPTĂMÂNII
+InvalidFieldYear=AN
+InvalidDomDowExpression=Specificarea atât a unei zile a lunii, cât și a zilei săptămânii nu este acceptată. Oricare sau alta trebuie declarată „?”
+InvalidYearsRangeValue=Expresia care descrie câmpul YEAR nu este într-un format valid. Valorile anului acceptat sunt %s-%s
+InvalidYearFrequencyValue=Expresia care descrie câmpul YEAR nu este într-un format valid. Valorile de frecvență acceptate sunt %s-%s
