--- a/src/main/resources/localization_ru.properties
+++ b/src/main/resources/localization_ru.properties
@@ -63,3 +63,16 @@ ComaEveryX0Years=,\u0020каждые\u0020%s\u0020лет
 CommaStartingX0=,\u0020начало\u0020%s
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020дней\u0020до\u0020последнего\u0020дня\u0020месяца
 ComaOnlyInYearX0=,\u0020только\u0020в\u0020%s
+InvalidExpressionFormatTooFewParts=Expresia\u0020cron\u0020„%s”\u0020are\u0020doar\u0020[%d]\u0020părți.\u0020Cel\u0020puțin\u00205\u0020părți\u0020sunt\u0020necesare.
+InvalidExpressionFormatTooManyParts=Expresia\u0020cron\u0020"%s"\u0020are\u0020prea\u0020multe\u0020părți\u0020[%d].\u0020Expresiile\u0020nu\u0020trebuie\u0020să\u0020aibă\u0020mai\u0020mult\u0020de\u00207\u0020părți.
+InvalidFieldExpressionFormat=Expresia\u0020care\u0020descrie\u0020câmpul\u0020%s\u0020nu\u0020este\u0020într-un\u0020format\u0020valid
+InvalidFieldSecond=AL\u0020DOILEA
+InvalidFieldMinute=MINUT
+InvalidFieldHour=ORA
+InvalidFieldDoM=ZIUA\u0020LUNII
+InvalidFieldMonth=LUNĂ
+InvalidFieldDoW=ZI\u0020A\u0020SĂPTĂMÂNII
+InvalidFieldYear=AN
+InvalidDomDowExpression=Specificarea\u0020atât\u0020a\u0020unei\u0020zile\u0020a\u0020lunii,\u0020cât\u0020și\u0020a\u0020zilei\u0020săptămânii\u0020nu\u0020este\u0020acceptată.\u0020Oricare\u0020sau\u0020alta\u0020trebuie\u0020declarată\u0020„?”
+InvalidYearsRangeValue=Expresia\u0020care\u0020descrie\u0020câmpul\u0020YEAR\u0020nu\u0020este\u0020într-un\u0020format\u0020valid.\u0020Valorile\u0020anului\u0020acceptat\u0020sunt\u0020%s-%s
+InvalidYearFrequencyValue=Expresia\u0020care\u0020descrie\u0020câmpul\u0020YEAR\u0020nu\u0020este\u0020într-un\u0020format\u0020valid.\u0020Valorile\u0020de\u0020frecvență\u0020acceptate\u0020sunt\u0020%s-%s
