--- a/src/main/resources/localization_sl.properties
+++ b/src/main/resources/localization_sl.properties
@@ -63,3 +63,16 @@ ComaEveryX0Years=,\u0020vsakih\u0020%s\u0020let
 CommaStartingX0=,\u0020začenši\u0020%s
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020dni\u0020pred\u0020koncem\u0020meseca
 ComaOnlyInYearX0=,\u0020samo\u0020v\u0020%s
+InvalidExpressionFormatTooFewParts=Kron\u0020izraz\u0020"%s"\u0020ima\u0020samo\u0020[%d]\u0020delov.\u0020Potrebnih\u0020je\u0020vsaj\u00205\u0020delov.
+InvalidExpressionFormatTooManyParts=Kron\u0020izraz\u0020"%s"\u0020ima\u0020preveč\u0020delov\u0020[%d].\u0020Izrazi\u0020ne\u0020smejo\u0020imeti\u0020več\u0020kot\u00207\u0020delov.
+InvalidFieldExpressionFormat=Izraz,\u0020ki\u0020opisuje\u0020%s\u0020polje,\u0020ni\u0020v\u0020veljavni\u0020obliki
+InvalidFieldSecond=DRUGI
+InvalidFieldMinute=MINUTE
+InvalidFieldHour=URA
+InvalidFieldDoM=DAN\u0020MESECA
+InvalidFieldMonth=MESEC
+InvalidFieldDoW=DAN\u0020TEDNI
+InvalidFieldYear=LETO
+InvalidDomDowExpression=Določitev\u0020dneva\u0020meseca\u0020in\u0020dneva\u0020v\u0020tednu\u0020ni\u0020podprta.\u0020Ali\u0020enega\u0020ali\u0020drugega\u0020je\u0020treba\u0020razglasiti\u0020kot\u0020"?"
+InvalidYearsRangeValue=Izraz,\u0020ki\u0020opisuje\u0020LETO,\u0020ni\u0020v\u0020veljavni\u0020obliki.\u0020Sprejete\u0020letne\u0020vrednosti\u0020so\u0020%s-%s
+InvalidYearFrequencyValue=Izraz,\u0020ki\u0020opisuje\u0020LETO,\u0020ni\u0020v\u0020veljavni\u0020obliki.\u0020Sprejete\u0020vrednosti\u0020frekvence\u0020so\u0020%s-%s
