--- a/src/main/resources/localization_sv.properties
+++ b/src/main/resources/localization_sv.properties
@@ -64,3 +64,16 @@ CommaStartingX0=,\u0020börjar\u0020%s
 AtX0MinutesPastTheHourGt20=vid\u0020%s\u0020minuter\u0020över
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020dagar\u0020före\u0020den\u0020sista\u0020dagen\u0020i\u0020månaden
 ComaOnlyInYearX0=,\u0020bara\u0020under\u0020%s
+InvalidExpressionFormatTooFewParts=Cron-uttrycket\u0020"%s"\u0020har\u0020bara\u0020[%d]\u0020delar.\u0020Minst\u00205\u0020delar\u0020krävs.
+InvalidExpressionFormatTooManyParts=Cron-uttrycket\u0020"%s"\u0020har\u0020för\u0020många\u0020delar\u0020[%d].\u0020Uttryck\u0020får\u0020inte\u0020ha\u0020mer\u0020än\u0020sju\u0020delar.
+InvalidFieldExpressionFormat=Uttrycket\u0020som\u0020beskriver\u0020fältet\u0020%s\u0020är\u0020inte\u0020i\u0020ett\u0020giltigt\u0020format
+InvalidFieldSecond=ANDRA
+InvalidFieldMinute=MINUT
+InvalidFieldHour=TIMME
+InvalidFieldDoM=MÅNEDENS\u0020DAG
+InvalidFieldMonth=MÅNAD
+InvalidFieldDoW=DAG\u0020I\u0020VECKAN
+InvalidFieldYear=ÅR
+InvalidDomDowExpression=Att\u0020ange\u0020både\u0020en\u0020dag\u0020i\u0020månaden\u0020och\u0020en\u0020dag\u0020i\u0020veckan\u0020stöds\u0020inte.\u0020Antingen\u0020ska\u0020det\u0020ena\u0020eller\u0020det\u0020andra\u0020förklaras\u0020som\u0020"?"
+InvalidYearsRangeValue=Uttrycket\u0020som\u0020beskriver\u0020fältet\u0020ÅR\u0020är\u0020inte\u0020i\u0020giltigt\u0020format.\u0020Accepterade\u0020årsvärden\u0020är\u0020%s-%s
+InvalidYearFrequencyValue=Uttrycket\u0020som\u0020beskriver\u0020fältet\u0020ÅR\u0020är\u0020inte\u0020i\u0020giltigt\u0020format.\u0020Godkända\u0020frekvensvärden\u0020är\u0020%s-%s
