--- a/src/main/resources/localization_tr.properties
+++ b/src/main/resources/localization_tr.properties
@@ -63,3 +63,16 @@ ComaEveryX0Years=,\u0020%s\u0020yılda\u0020bir
 CommaStartingX0=,\u0020başlangıç\u0020%s
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020ayın\u0020son\u0020gününden\u0020önceki\u0020günler
 ComaOnlyInYearX0=,\u0020sadece\u0020%s\u0020için
+InvalidExpressionFormatTooFewParts="%s"\u0020cron\u0020ifadesi\u0020yalnızca\u0020[%d]\u0020parçaya\u0020sahiptir.\u0020En\u0020az\u00205\u0020parça\u0020gereklidir.
+InvalidExpressionFormatTooManyParts="%s"\u0020cron\u0020ifadesi\u0020çok\u0020fazla\u0020parçaya\u0020[%d]\u0020sahip.\u0020İfadeler\u00207\u0020bölümden\u0020fazla\u0020olmamalıdır.
+InvalidFieldExpressionFormat=%s\u0020alanını\u0020tanımlayan\u0020ifade\u0020geçerli\u0020bir\u0020biçimde\u0020değil
+InvalidFieldSecond=İKİNCİ
+InvalidFieldMinute=DAKİKA
+InvalidFieldHour=SAAT
+InvalidFieldDoM=AYIN\u0020GÜNÜ
+InvalidFieldMonth=AY
+InvalidFieldDoW=HAFTANIN\u0020GÜNÜ
+InvalidFieldYear=YIL
+InvalidDomDowExpression=Hem\u0020Ay\u0020Günü\u0020hem\u0020de\u0020Haftanın\u0020Günü\u0020belirtilmesi\u0020desteklenmez.\u0020Ya\u0020biri\u0020ya\u0020da\u0020diğeri\u0020"?"
+InvalidYearsRangeValue=YEAR\u0020alanını\u0020tanımlayan\u0020ifade\u0020geçerli\u0020bir\u0020biçimde\u0020değil.\u0020Kabul\u0020edilen\u0020yıl\u0020değerleri\u0020%s-%s
+InvalidYearFrequencyValue=YEAR\u0020alanını\u0020tanımlayan\u0020ifade\u0020geçerli\u0020bir\u0020biçimde\u0020değil.\u0020Kabul\u0020edilen\u0020frekans\u0020değerleri\u0020%s-%s
