--- a/src/main/resources/localization_uk.properties
+++ b/src/main/resources/localization_uk.properties
@@ -63,3 +63,16 @@ ComaEveryX0Years=,\u0020кожні\u0020%s\u0020роки
 CommaStartingX0=,\u0020початок\u0020%s
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020днів\u0020до\u0020останнього\u0020дня\u0020місяця
 ComaOnlyInYearX0=,\u0020тільки\u0020в\u0020%s
+InvalidExpressionFormatTooFewParts=Вираз\u0020крона\u0020"%s"\u0020має\u0020лише\u0020[%d]\u0020частини.\u0020Потрібно\u0020як\u0020мінімум\u00205\u0020деталей.
+InvalidExpressionFormatTooManyParts=Вираз\u0020крона\u0020"%s"\u0020має\u0020занадто\u0020багато\u0020частин\u0020[%d].\u0020Вирази\u0020не\u0020повинні\u0020мати\u0020більше\u00207\u0020частин.
+InvalidFieldExpressionFormat=Вираз,\u0020що\u0020описує\u0020поле\u0020%s,\u0020не\u0020в\u0020допустимому\u0020форматі
+InvalidFieldSecond=ДРУГИЙ
+InvalidFieldMinute=ХВИН
+InvalidFieldHour=ГОДА
+InvalidFieldDoM=ДЕНЬ\u0020МІСЯЦЯ
+InvalidFieldMonth=МІСЯЦЬ
+InvalidFieldDoW=ДЕНЬ\u0020ТИЖДЕНЯ
+InvalidFieldYear=РІК
+InvalidDomDowExpression=Вказівка\u0020і\u0020дня\u0020місяця,\u0020і\u0020дня\u0020тижня\u0020не\u0020підтримується.\u0020Чи\u0020те,\u0020чи\u0020інше\u0020слід\u0020оголосити\u0020як\u0020"?"
+InvalidYearsRangeValue=Вираз,\u0020що\u0020описує\u0020поле\u0020РОКІВ,\u0020не\u0020має\u0020правильного\u0020формату.\u0020Значення\u0020прийнятого\u0020року\u0020-%s-%s
+InvalidYearFrequencyValue=Вираз,\u0020що\u0020описує\u0020поле\u0020РОКІВ,\u0020не\u0020має\u0020правильного\u0020формату.\u0020Прийняті\u0020значення\u0020частоти\u0020-%s-%s
