--- a/src/main/resources/localization_zh_CN.properties
+++ b/src/main/resources/localization_zh_CN.properties
@@ -63,3 +63,16 @@ ComaEveryX0Years=,\u0020每\u0020%s\u0020年
 CommaStartingX0=,\u0020开始\u0020%s
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020这个月的最后一天的前几天
 ComaOnlyInYearX0=,\u0020仅在\u0020%s
+InvalidExpressionFormatTooFewParts=cron表达式“％s”仅包含[％d]个部分。\u0020至少需要5个零件。
+InvalidExpressionFormatTooManyParts=cron表达式“％s”包含太多部分[％d]。\u0020表达式不能超过7个部分。
+InvalidFieldExpressionFormat=描述％s字段的表达式格式无效
+InvalidFieldSecond=第二
+InvalidFieldMinute=分钟
+InvalidFieldHour=小时
+InvalidFieldDoM=MONTH天
+InvalidFieldMonth=月
+InvalidFieldDoW=星期几
+InvalidFieldYear=年
+InvalidDomDowExpression=不支持同时指定月份和星期几。\u0020一个或另一个都应声明为“？”
+InvalidYearsRangeValue=描述YEAR字段的表达式格式无效。\u0020可接受的年份值为％s-％s
+InvalidYearFrequencyValue=描述YEAR字段的表达式格式无效。\u0020可接受的频率值为％s-％s
