--- a/src/main/resources/localization_zh_HK.properties
+++ b/src/main/resources/localization_zh_HK.properties
@@ -63,3 +63,16 @@ ComaEveryX0Years=,\u0020每\u0020%s\u0020年
 CommaStartingX0=,\u0020開始\u0020%s
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020這個月的最後一天的前幾天
 ComaOnlyInYearX0=,\u0020僅在\u0020%s
+InvalidExpressionFormatTooFewParts=cron表達式“％s”僅包含[％d]個部分。\u0020至少需要5個零件。
+InvalidExpressionFormatTooManyParts=cron表達式“％s”包含太多部分[％d]。\u0020表達式不能超過7個部分。
+InvalidFieldExpressionFormat=描述％s字段的表達式格式無效
+InvalidFieldSecond=第二
+InvalidFieldMinute=分鐘
+InvalidFieldHour=小時
+InvalidFieldDoM=MONTH天
+InvalidFieldMonth=月
+InvalidFieldDoW=星期幾
+InvalidFieldYear=年
+InvalidDomDowExpression=不支持同時指定月份和星期幾。\u0020一個或另一個都應聲明為“？”
+InvalidYearsRangeValue=描述YEAR字段的表達式格式無效。\u0020可接受的年份值為％s-％s
+InvalidYearFrequencyValue=描述YEAR字段的表達式格式無效。\u0020可接受的頻率值為％s-％s
