--- a/src/main/resources/localization_it.properties
+++ b/src/main/resources/localization_it.properties
@@ -65,3 +65,16 @@ AMPeriod=AM
 PMPeriod=PM
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020giorni\u0020prima\u0020dell'ultimo\u0020giorno\u0020del\u0020mese
 ComaOnlyInYearX0=,\u0020solo\u0020nel\u0020%s
+InvalidExpressionFormatTooFewParts=L'espressione\u0020cron\u0020"%s"\u0020ha\u0020solo\u0020[%d]\u0020parti.\u0020Sono\u0020necessarie\u0020almeno\u00205\u0020parti.
+InvalidExpressionFormatTooManyParts=L'espressione\u0020cron\u0020"%s"\u0020ha\u0020troppe\u0020parti\u0020[%d].\u0020Le\u0020espressioni\u0020non\u0020devono\u0020avere\u0020più\u0020di\u00207\u0020parti.
+InvalidFieldExpressionFormat=L'espressione\u0020che\u0020descrive\u0020il\u0020campo\u0020%s\u0020non\u0020è\u0020in\u0020un\u0020formato\u0020valido
+InvalidFieldSecond=SECONDO
+InvalidFieldMinute=MINUTO
+InvalidFieldHour=ORA
+InvalidFieldDoM=GIORNO\u0020DEL\u0020MESE
+InvalidFieldMonth=MESE
+InvalidFieldDoW=GIORNO\u0020DELLA\u0020SETTIMANA
+InvalidFieldYear=ANNO
+InvalidDomDowExpression=Specificare\u0020sia\u0020un\u0020giorno\u0020del\u0020mese\u0020che\u0020un\u0020giorno\u0020della\u0020settimana\u0020non\u0020è\u0020supportato.\u0020Uno\u0020o\u0020l'altro\u0020dovrebbe\u0020essere\u0020dichiarato\u0020come\u0020"?"
+InvalidYearsRangeValue=L'espressione\u0020che\u0020descrive\u0020il\u0020campo\u0020ANNO\u0020non\u0020è\u0020in\u0020un\u0020formato\u0020valido.\u0020I\u0020valori\u0020dell'anno\u0020accettati\u0020sono\u0020%s-%s
+InvalidYearFrequencyValue=L'espressione\u0020che\u0020descrive\u0020il\u0020campo\u0020ANNO\u0020non\u0020è\u0020in\u0020un\u0020formato\u0020valido.\u0020I\u0020valori\u0020di\u0020frequenza\u0020accettati\u0020sono\u0020%s-%s
