- Fixed Italian localization. This fixes #1 - Updated Idea project files to version 2021.1.1

--- a/src/main/resources/localization_it.properties
+++ b/src/main/resources/localization_it.properties
@@ -18,7 +18,7 @@ OCT=Ottobre
 NOV=Novembre
 DEC=Dicembre
 EveryMinute=ogni\u0020minuto
-EveryHour=every\u0020hour
+EveryHour=ogni\u0020ora
 AnErrorOccuredWhenGeneratingTheExpressionD=Errore\u0020durante\u0020la\u0020generazione\u0020la\u0020descrizione.\u0020Controllare\u0020la\u0020sintassi\u0020dell'espressione.
 AtSpace=Alle\u0020
 EveryMinuteBetweenX0AndX1=Ogni\u0020minuto\u0020tra\u0020le\u0020%s\u0020e\u0020le\u0020%s
@@ -51,7 +51,7 @@ ComaOnlyInX0=,\u0020solo\u0020in\u0020%s
 ComaOnTheLastDayOfTheMonth=,\u0020l'ultimo\u0020giorno\u0020del\u0020mese
 ComaOnTheLastWeekdayOfTheMonth=,\u0020nell'ultima\u0020settimana\u0020del\u0020mese
 FirstWeekday=primo\u0020giorno\u0020della\u0020settimana
-WeekdayNearestDayX0=giorno\u0020della\u0020settimana\u0020più\u0020vicino\u0020al\u0020%s
+WeekdayNearestDayX0=giorno\u0020della\u0020settimana\u0020piï¿½\u0020vicino\u0020al\u0020%s
 ComaOnTheX0OfTheMonth=,\u0020il\u0020%s\u0020del\u0020mese
 ComaEveryX0Days=,\u0020ogni\u0020%s\u0020giorni
 ComaBetweenDayX0AndX1OfTheMonth=,\u0020tra\u0020il\u0020giorno\u0020%s\u0020e\u0020%s\u0020del\u0020mese
@@ -66,8 +66,8 @@ PMPeriod=PM
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020giorni\u0020prima\u0020dell'ultimo\u0020giorno\u0020del\u0020mese
 ComaOnlyInYearX0=,\u0020solo\u0020nel\u0020%s
 InvalidExpressionFormatTooFewParts=L'espressione\u0020cron\u0020"%s"\u0020ha\u0020solo\u0020[%d]\u0020parti.\u0020Sono\u0020necessarie\u0020almeno\u00205\u0020parti.
-InvalidExpressionFormatTooManyParts=L'espressione\u0020cron\u0020"%s"\u0020ha\u0020troppe\u0020parti\u0020[%d].\u0020Le\u0020espressioni\u0020non\u0020devono\u0020avere\u0020più\u0020di\u00207\u0020parti.
-InvalidFieldExpressionFormat=L'espressione\u0020che\u0020descrive\u0020il\u0020campo\u0020%s\u0020non\u0020è\u0020in\u0020un\u0020formato\u0020valido
+InvalidExpressionFormatTooManyParts=L'espressione\u0020cron\u0020"%s"\u0020ha\u0020troppe\u0020parti\u0020[%d].\u0020Le\u0020espressioni\u0020non\u0020devono\u0020avere\u0020piï¿½\u0020di\u00207\u0020parti.
+InvalidFieldExpressionFormat=L'espressione\u0020che\u0020descrive\u0020il\u0020campo\u0020%s\u0020non\u0020ï¿½\u0020in\u0020un\u0020formato\u0020valido
 InvalidFieldSecond=SECONDO
 InvalidFieldMinute=MINUTO
 InvalidFieldHour=ORA
@@ -75,6 +75,6 @@ InvalidFieldDoM=GIORNO\u0020DEL\u0020MESE
 InvalidFieldMonth=MESE
 InvalidFieldDoW=GIORNO\u0020DELLA\u0020SETTIMANA
 InvalidFieldYear=ANNO
-InvalidDomDowExpression=Specificare\u0020sia\u0020un\u0020giorno\u0020del\u0020mese\u0020che\u0020un\u0020giorno\u0020della\u0020settimana\u0020non\u0020è\u0020supportato.\u0020Uno\u0020o\u0020l'altro\u0020dovrebbe\u0020essere\u0020dichiarato\u0020come\u0020"?"
-InvalidYearsRangeValue=L'espressione\u0020che\u0020descrive\u0020il\u0020campo\u0020ANNO\u0020non\u0020è\u0020in\u0020un\u0020formato\u0020valido.\u0020I\u0020valori\u0020dell'anno\u0020accettati\u0020sono\u0020%s-%s
-InvalidYearFrequencyValue=L'espressione\u0020che\u0020descrive\u0020il\u0020campo\u0020ANNO\u0020non\u0020è\u0020in\u0020un\u0020formato\u0020valido.\u0020I\u0020valori\u0020di\u0020frequenza\u0020accettati\u0020sono\u0020%s-%s
+InvalidDomDowExpression=Specificare\u0020sia\u0020un\u0020giorno\u0020del\u0020mese\u0020che\u0020un\u0020giorno\u0020della\u0020settimana\u0020non\u0020ï¿½\u0020supportato.\u0020Uno\u0020o\u0020l'altro\u0020dovrebbe\u0020essere\u0020dichiarato\u0020come\u0020"?"
+InvalidYearsRangeValue=L'espressione\u0020che\u0020descrive\u0020il\u0020campo\u0020ANNO\u0020non\u0020ï¿½\u0020in\u0020un\u0020formato\u0020valido.\u0020I\u0020valori\u0020dell'anno\u0020accettati\u0020sono\u0020%s-%s
+InvalidYearFrequencyValue=L'espressione\u0020che\u0020descrive\u0020il\u0020campo\u0020ANNO\u0020non\u0020ï¿½\u0020in\u0020un\u0020formato\u0020valido.\u0020I\u0020valori\u0020di\u0020frequenza\u0020accettati\u0020sono\u0020%s-%s
