Removed "dal" from the "CommaStarting" string template to match upstream localization.

--- a/src/main/resources/localization_it.properties
+++ b/src/main/resources/localization_it.properties
@@ -60,7 +60,7 @@ SpaceAndSpace=\u0020e\u0020
 ComaEveryMinute=,\u0020ogni\u0020minuto
 ComaEveryHour=,\u0020ogni\u0020ora
 ComaEveryX0Years=,\u0020ogni\u0020%s\u0020anni
-CommaStartingX0=,\u0020a\u0020partire\u0020dal\u0020%s
+CommaStartingX0=,\u0020a\u0020partire\u0020%s
 AMPeriod=AM
 PMPeriod=PM
 CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020giorni\u0020prima\u0020dell'ultimo\u0020giorno\u0020del\u0020mese
