--- a/src/main/resources/localization_de.properties
+++ b/src/main/resources/localization_de.properties
@@ -52,10 +52,10 @@ ComaOnTheLastDayOfTheMonth=,\u0020am\u0020letzten\u0020Tag\u0020des\u0020Monats
 ComaOnTheLastWeekdayOfTheMonth=,\u0020am\u0020letzten\u0020Werktag\u0020des\u0020Monats
 FirstWeekday=ersten\u0020Werktag
 WeekdayNearestDayX0=Werktag\u0020am\u0020nächsten\u0020zum\u0020%s\u0020Tag
-ComaOnTheX0OfTheMonth=,\u0020am\u0020%s\u0020des\u0020Monats
+ComaOnTheX0OfTheMonth=,\u0020am\u0020%s.\u0020des\u0020Monats
 ComaEveryX0Days=,\u0020alle\u0020%s\u0020Tage
 ComaBetweenDayX0AndX1OfTheMonth=,\u0020zwischen\u0020Tag\u0020%s\u0020und\u0020%s\u0020des\u0020Monats
-ComaOnDayX0OfTheMonth=,\u0020am\u0020%s\u0020Tag\u0020des\u0020Monats
+ComaOnDayX0OfTheMonth=,\u0020am\u0020%s.\u0020Tag\u0020des\u0020Monats
 SpaceAndSpace=\u0020und\u0020
 ComaEveryMinute=,\u0020jede\u0020Minute
 ComaEveryHour=,\u0020jede\u0020Stunde
