Fix missing translation in localization_fr.properties and remove uppercase on days of the week

--- a/src/main/resources/localization_fr.properties
+++ b/src/main/resources/localization_fr.properties
@@ -1,10 +1,10 @@
-SUN=Dimanche
-MON=Lundi
-TUE=Mardi
-WED=Mercredi
-THU=Jeudi
-FRI=Vendredi
-SAT=Samedi
+SUN=dimanche
+MON=lundi
+TUE=mardi
+WED=mercredi
+THU=jeudi
+FRI=vendredi
+SAT=samedi
 JAN=Janvier
 FEB=Février
 MAR=Mars
@@ -35,7 +35,7 @@ EveryX0Hours=toutes\u0020les\u0020%s\u0020heures
 BetweenX0AndX1=de\u0020%s\u0020à\u0020%s
 AtX0=à\u0020%s
 ComaEveryDay=,\u0020tous\u0020les\u0020jours
-ComaEveryX0DaysOfTheWeek=,\u0020every\u0020%s\u0020days\u0020of\u0020the\u0020week
+ComaEveryX0DaysOfTheWeek=,\u0020tous\u0020%s\u0020les\u0020jours\u0020de\u0020la\u0020semaine
 ComaX0ThroughX1=,\u0020de\u0020%s\u0020à\u0020%s
 First=premier
 Second=second
