--- a/src/main/resources/localization_fr.properties
+++ b/src/main/resources/localization_fr.properties
@@ -35,7 +35,7 @@ EveryX0Hours=toutes\u0020les\u0020%s\u0020heures
 BetweenX0AndX1=de\u0020%s\u0020à\u0020%s
 AtX0=à\u0020%s
 ComaEveryDay=,\u0020tous\u0020les\u0020jours
-ComaEveryX0DaysOfTheWeek=,\u0020tous\u0020%s\u0020les\u0020jours\u0020de\u0020la\u0020semaine
+ComaEveryX0DaysOfTheWeek=,\u0020tous\u0020les\u0020%s\u0020jours\u0020de\u0020la\u0020semaine
 ComaX0ThroughX1=,\u0020de\u0020%s\u0020à\u0020%s
 First=premier
 Second=second
